first working simple security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 security.user.password:abc
+#klappt nicht - wird zu "": security.basic.realm="tuerauf"
+#security.ignored[0]="/**"
+security.basic.enabled: false
+#security.require-ssl=true
 
 logging.level.org.lightadmin=DEBUG
 
