--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-security.user.password:abc
+
+#security.user.password:abc
 #klappt nicht - wird zu "": security.basic.realm="tuerauf"
 #security.ignored[0]="/**"
 security.basic.enabled: false
@@ -7,3 +8,15 @@ security.basic.enabled: false
 logging.level.org.lightadmin=DEBUG
 
 logging.level=INFO
+
+
+#see http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#howto-change-configuration-depending-on-the-environment
+#ungetestet
+---
+
+spring:
+    profiles: production
+
+logging
+    level
+        org.lightadmin=DEBUG
