--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ logging.level.org.lightadmin=DEBUG
 logging.level=INFO
 
 
+tuerauf.appsecret=secretApp
+
+
 #see http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#howto-change-configuration-depending-on-the-environment
 #ungetestet
 ---
