registerUser implemented; with tests (running only seperately, yet)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ security.basic.enabled: false
 #security.require-ssl=true
 
 logging.level.org.lightadmin=DEBUG
-
 logging.level=INFO
 
+slf4j.detectLoggerNameMismatch=true
 
 tuerauf.appsecret=secretApp
 
