user registration test improvments; auth corrections to make tests run all

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ security.basic.enabled: false
 #security.require-ssl=true
 
 logging.level.org.lightadmin=DEBUG
+logging.level.net.steinkopf=DEBUG
 logging.level=INFO
 
 slf4j.detectLoggerNameMismatch=true
