--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ logging.level=INFO
 slf4j.detectLoggerNameMismatch=true
 
 tuerauf.appsecret=secretApp
+tuerauf.admin-mail-address=dirk@wor.net
+
+spring.mail.host=localhost
+
 
 #see http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#howto-change-configuration-depending-on-the-environment
 #ungetestet
