openDoor incl. tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,19 @@ security.basic.enabled: false
 
 logging.level.org.lightadmin=DEBUG
 logging.level.net.steinkopf=DEBUG
-logging.level=INFO
+#logging.level.org=DEBUG
 
 slf4j.detectLoggerNameMismatch=true
 
 tuerauf.appsecret=secretApp
 tuerauf.admin-mail-address=dirk@wor.net
+
+tuerauf.home.geoy=48.109535
+tuerauf.home.geox=11.622306
+tuerauf.home.max-dist-outer=80
+tuerauf.home.max-dist=40
+
+tuerauf.arduino-base-url=http://arduino.steinkopf.net:1080/
 
 spring.mail.host=localhost
 
