--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 
-#security.user.password:abc
-#klappt nicht - wird zu "": security.basic.realm="tuerauf"
-#security.ignored[0]="/**"
+#does not work - becomes "": security.basic.realm="tuerauf"
 security.basic.enabled: false
 #security.require-ssl=true
 
@@ -12,25 +10,19 @@ logging.level.net.steinkopf=DEBUG
 slf4j.detectLoggerNameMismatch=true
 
 tuerauf.appsecret=secretApp
-tuerauf.admin-mail-address=dirk@wor.net
+tuerauf.admin-password=admin
+tuerauf.user-password=user
+tuerauf.admin-mail-address=
+tuerauf.from-mail-address=
 
-tuerauf.home.geoy=48.109535
-tuerauf.home.geox=11.622306
+tuerauf.home.geoy=12.3456
+tuerauf.home.geox=45.6789
 tuerauf.home.max-dist-outer=80
 tuerauf.home.max-dist=40
 
-tuerauf.arduino-base-url=http://arduino.steinkopf.net:1080/
+tuerauf.arduino-base-url=http://my-internal-server.myhome.net:1234/
 
 spring.mail.host=localhost
 
-
-#see http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#howto-change-configuration-depending-on-the-environment
-#ungetestet
----
-
-spring:
-    profiles: production
-
-logging
-    level
-        org.lightadmin=DEBUG
+spring.view.prefix: /WEB-INF/jsp/
+spring.view.suffix: .jsp
