use /dev/urandom in docker image

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,6 +1,10 @@
 FROM tomcat:7.0-jre8
+
 COPY tuerauf.war $CATALINA_HOME/webapps/
 RUN bash -c "touch $CATALINA_HOME/webapps/tuerauf.war"
+
+COPY setenv.sh $CATALINA_HOME/bin/
+
 #see tomcat: EXPOSE 8080
 #see tomcat: WORKDIR $CATALINA_HOME
 CMD ["catalina.sh", "run"]
@@ -10,4 +14,4 @@ CMD ["catalina.sh", "run"]
 # mvn -Dmaven.test.skip=true package docker:build
 
 # run
-# docker run -P --rm -p 8080:8080 -v /dev/urandom:/dev/random --name tuerauf dsteinkopf/tuerauf
+# docker run -P --rm -p 8080:8080 --name tuerauf dsteinkopf/tuerauf
