--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM tomcat:7.0-jre8
 
+MAINTAINER Dirk Steinkopf "https://github.com/dsteinkopf"
+
 COPY tuerauf.war $CATALINA_HOME/webapps/
 RUN bash -c "touch $CATALINA_HOME/webapps/tuerauf.war"
 
@@ -10,8 +12,9 @@ COPY setenv.sh $CATALINA_HOME/bin/
 CMD ["catalina.sh", "run"]
 
 # build:
-# mvn package docker:build
+# mvn                        package docker:build
 # mvn -Dmaven.test.skip=true package docker:build
+# mvn -Dmaven.test.skip=true package docker:build -DpushImage
 
 # run
 # docker run -P --rm -p 8080:8080 --name tuerauf dsteinkopf/tuerauf
