fix testcase checking serialId, more logging/tracing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ security.basic.enabled: false
 #security.require-ssl=true
 
 logging.level.org.lightadmin=DEBUG
-logging.level.net.steinkopf=DEBUG
+logging.level.net.steinkopf=TRACE
 #logging.level.org=DEBUG
 
 slf4j.detectLoggerNameMismatch=true
