--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ security.basic.enabled: false
 
 logging.level.org.lightadmin=DEBUG
 logging.level.net.steinkopf=TRACE
+logging.level.org.springframework=WARN
 #logging.level.org=DEBUG
 
 slf4j.detectLoggerNameMismatch=true
