--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -7,6 +7,8 @@ RUN bash -c "touch $CATALINA_HOME/webapps/tuerauf.war"
 
 COPY setenv.sh $CATALINA_HOME/bin/
 
+VOLUME $CATALINA_HOME/conf
+
 #see tomcat: EXPOSE 8080
 #see tomcat: WORKDIR $CATALINA_HOME
 CMD ["catalina.sh", "run"]
@@ -16,5 +18,8 @@ CMD ["catalina.sh", "run"]
 # mvn -Dmaven.test.skip=true package docker:build
 # mvn -Dmaven.test.skip=true package docker:build -DpushImage
 
-# run
+# run develop
 # docker run -P --rm -p 8080:8080 --name tuerauf dsteinkopf/tuerauf
+
+# run prod
+# docker run --env=SPRING_PROFILES_ACTIVE=prod --env=SPRING_CONFIG_LOCATION=/usr/local/tomcat/conf/application-prod.properties -v $PWD/src/main/resources/application-prod.properties:/usr/local/tomcat/conf/application-prod.properties -P --rm -p 8080:8080 --name tuerauf dsteinkopf/tuerauf
