--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,10 @@
 
-## Customize the test machine
 machine:
-
   timezone:
     Europe/Berlin
-
   java:
     version: oraclejdk8
+
+test:
+  post:
+    - mvn -Dmaven.test.skip=true package docker:build -DpushImage
