--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,16 @@ machine:
     Europe/Berlin
   java:
     version: oraclejdk8
+  services:
+    - docker
 
 test:
   post:
-    - mvn -Dmaven.test.skip=true package docker:build -DpushImage
+    - mvn -Dmaven.test.skip=true package docker:build
+
+deployment:
+  hub:
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push dsteinkopf/tuerauf
