add lightadmin from ex-lazaridis-github-repo in local maven repository

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 ######################
 # Package Files
 ######################
-*.jar
+# no I want to add jar files in repo: *.jar
 *.war
 *.ear
 *.db
