added some useful properties

--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ test:
     - mvn -Dmaven.test.skip=true package docker:build
 
 deployment:
-  hub:
+  dockerhub:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
