--- a/src/main/resources/application-prod-template.properties
+++ b/src/main/resources/application-prod-template.properties
@@ -1,8 +1,9 @@
+#see also http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 
 logging.level.org.lightadmin=WARN
 logging.level.net.steinkopf=WARN
 logging.level.org.springframework=WARN
-#logging.level.org=DEBUG
+#logging.level.*=DEBUG # levels for loggers, e.g. "logging.level.org.springframework=DEBUG" (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
 
 #user note used: password empty = no user
 tuerauf.user-password=
@@ -29,5 +30,6 @@ spring.datasource.password=tuerauf
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-
 spring.profiles.active=mysql
+
+spring.mvc.locale=de_DE # set fixed locale, e.g. en_UK
