--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ security.basic.enabled: false
 logging.level.org.lightadmin=DEBUG
 logging.level.net.steinkopf=TRACE
 logging.level.org.springframework=WARN
-#logging.level.org=DEBUG
+#logging.level.*=DEBUG # levels for loggers, e.g. "logging.level.org.springframework=DEBUG" (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
 
 slf4j.detectLoggerNameMismatch=true
 
@@ -27,3 +27,7 @@ spring.mail.host=localhost
 
 spring.view.prefix: /WEB-INF/jsp/
 spring.view.suffix: .jsp
+
+# see http://stackoverflow.com/questions/22684807/spring-boot-jpa-configuring-auto-reconnect
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
