--- a/src/main/resources/application-prod-template.properties
+++ b/src/main/resources/application-prod-template.properties
@@ -32,4 +32,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=mysql
 
+# see http://stackoverflow.com/questions/22684807/spring-boot-jpa-configuring-auto-reconnect
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+
 spring.mvc.locale=de_DE # set fixed locale, e.g. en_UK
