upgrade to lightadmin 1.2.0.BUILD-SNAPSHOT -> remove local repo change from war to jar/integrated tomcat -> adapt tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #does not work - becomes "": security.basic.realm="tuerauf"
 security.basic.enabled: false
 #security.require-ssl=true
+server.context-path=/tuerauf
 
 logging.level.org.lightadmin=DEBUG
 logging.level.net.steinkopf=TRACE
@@ -27,3 +28,7 @@ spring.mail.host=localhost
 
 spring.view.prefix: /WEB-INF/jsp/
 spring.view.suffix: .jsp
+
+# Why do we need these? (because an error message tells me so...)
+spring.freemarker.checkTemplateLocation=false
+spring.velocity.checkTemplateLocation=false
