--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,10 @@
 	<groupId>net.steinkopf</groupId>
 	<artifactId>tuerauf</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>tuerauf</name>
 	<description>Tür auf</description>
-
-    <repositories>
-        <repository>
-            <id>data-local</id>
-            <name>data</name>
-            <url>file://${project.basedir}/repo</url>
-        </repository>
-    </repositories>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -34,7 +26,14 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
+
+        <dependency>
+            <groupId>org.lightadmin</groupId>
+            <artifactId>lightadmin</artifactId>
+            <version>1.2.0.BUILD-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
@@ -66,10 +65,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<scope>runtime</scope>
@@ -85,12 +90,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.lightadmin</groupId>
-			<artifactId>lightadmin</artifactId>
-			<version>1.1.0.BUILD-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -111,23 +110,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.1</version>
-                <configuration>
-                    <ignorePackaging>true</ignorePackaging> <!-- If set to true ignore if packaging of project is not 'war' -->
-                </configuration>
-			</plugin>
-
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <packagingExcludes>**/application-prod.properties</packagingExcludes>
-                </configuration>
-            </plugin>
-
             <plugin>
 				<!-- see https://github.com/spotify/docker-maven-plugin -->
                 <groupId>com.spotify</groupId>
@@ -140,7 +122,7 @@
                         <resource>
                             <targetPath>/</targetPath>
                             <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.war</include>
+                            <include>${project.build.finalName}.jar</include>
                         </resource>
                     </resources>
                 </configuration>
@@ -148,5 +130,24 @@
 
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>lightadmin-nexus-releases</id>
+			<url>http://lightadmin.org/nexus/content/repositories/releases</url>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</releases>
+		</repository>
+		<repository>
+			<id>lightadmin-nexus-snapshots</id>
+			<url>http://lightadmin.org/nexus/content/repositories/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
 
 </project>
