--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
 
 	<dependencies>
 
+        <!-- check for updated dependencies in repository: -->
+        <!-- mvn versions:display-dependency-updates -->
+
         <dependency>
             <groupId>org.lightadmin</groupId>
             <artifactId>lightadmin</artifactId>
@@ -127,6 +130,16 @@
                     </resources>
                 </configuration>
             </plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+                    <!-- AuthTest (calling /admin) doesn't work when forking - don't know yet why. So we set this to 0: -->
+					<forkCount>0</forkCount>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
