first empty JSP working (incl. tests)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ tuerauf.arduino-base-url=http://my-internal-server.myhome.net:1234/
 
 spring.mail.host=localhost
 
-spring.view.prefix: /WEB-INF/jsp/
-spring.view.suffix: .jsp
+spring.view.prefix=/WEB-INF/jsp/
+spring.view.suffix=.jsp
 
 # Why do we need these? (because an error message tells me so...)
 spring.freemarker.checkTemplateLocation=false
