some minor fixes (typos, wording, css)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ spring.view.suffix=.jsp
 # Why do we need these? (because an error message tells me so...)
 spring.freemarker.checkTemplateLocation=false
 spring.velocity.checkTemplateLocation=false
+
+# Encoding will be wrong, if we miss this one. Why?
+spring.http.encoding.force=false
