switch back to war deployment to make JSP work ("no JSP in JAR...")

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,4 @@ spring.freemarker.checkTemplateLocation=false
 spring.velocity.checkTemplateLocation=false
 
 # Encoding will be wrong, if we miss this one. Why?
-spring.http.encoding.force=false
+# spring.http.encoding.force=false
