test send pins to Arduino

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,8 @@ tuerauf.home.geox=45.6789
 tuerauf.home.max-dist-outer=80
 tuerauf.home.max-dist=40
 
-tuerauf.arduino-base-url=http://my-internal-server.myhome.net:1234/
+# if empty then arduino is faked
+tuerauf.arduino-base-url=
 
 spring.mail.host=localhost
 
