--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,8 @@ spring.freemarker.checkTemplateLocation=false
 spring.velocity.checkTemplateLocation=false
 
 # Encoding will be wrong, if we miss this one. Why?
-# spring.http.encoding.force=false
+spring.http.encoding.force=false
+
+tuerauf.git-revision-hash=${buildNumber}
+tuerauf.build.timestamp=${timestamp}
+tuerauf.build.timestamp.format=${maven.build.timestamp.format}
