corrected comment how to run prod docker

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -22,7 +22,7 @@ CMD ["catalina.sh", "run"]
 # docker run -P --rm -p 8080:8080 --name tuerauf dsteinkopf/tuerauf
 
 # run prod
-# docker run --env=SPRING_PROFILES_ACTIVE=prod --env=SPRING_CONFIG_LOCATION=/usr/local/tomcat/conf/application-prod.properties -v $PWD/src/main/resources/application-prod.properties:/usr/local/tomcat/conf/application-prod.properties -P --rm -p 8080:8080 --name tuerauf dsteinkopf/tuerauf
+# docker run --env=SPRING_PROFILES_ACTIVE=prod --env=SPRING_CONFIG_LOCATION=/usr/local/tomcat/conf/application-prod.properties -v $PWD/src/main/resources/application-prod.properties:/usr/local/tomcat/conf/application-prod.properties --link mysql:mysql-1 -P --rm -p 8080:8080 --name tuerauf dsteinkopf/tuerauf
 
 # run mysql e.g.
 # docker run --env=MYSQL_PASS=tuerauf --env=ON_CREATE_DB=tuerauf -v /opt/tuerauf/var_lib_mysql:/var/lib/mysql --rm --name mysql tutum/mysql
