make app run on this backend

--- a/src/main/resources/application-prod-template.properties
+++ b/src/main/resources/application-prod-template.properties
@@ -20,6 +20,9 @@ tuerauf.home.max-dist=40
 
 tuerauf.arduino-base-url=http://arduino.myhome:1234/
 
+# baseUrl reachable from world including context and /frontend (if any)
+tuerauf.external-url=https://my-server.mydomain.xyz:8080/tuerauf/frontend
+
 spring.mail.host=mailserver
 spring.mail.username=mailuser
 spring.mail.password=mailpw
