--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ tuerauf.home.max-dist=40
 # if empty then arduino is faked
 tuerauf.arduino-base-url=
 
+# baseUrl reachable from world including context and /frontend (if any)
+tuerauf.external-url=http://localhost:8080/tuerauf/frontend
+
 spring.mail.host=localhost
 
 spring.view.prefix=/WEB-INF/jsp/
