create config link correctly with tuerauftest: in test version

--- a/src/main/resources/application-prod-template.properties
+++ b/src/main/resources/application-prod-template.properties
@@ -22,6 +22,8 @@ tuerauf.arduino-base-url=http://arduino.myhome:1234/
 
 # baseUrl reachable from world including context and /frontend (if any)
 tuerauf.external-url=https://my-server.mydomain.xyz:8080/tuerauf/frontend
+# false creates app-link "tuerauftest://..."
+tuerauf.prod-version=true
 
 spring.mail.host=mailserver
 spring.mail.username=mailuser
