--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,8 @@ tuerauf.arduino-base-url=
 
 # baseUrl reachable from world including context and /frontend (if any)
 tuerauf.external-url=http://localhost:8080/tuerauf/frontend
+# false creates app-link "tuerauftest://..."
+tuerauf.prod-version=false
 
 spring.mail.host=localhost
 
