--- a/tutum-test.yml
+++ b/tutum-test.yml
@@ -9,6 +9,7 @@ mysql-test:
     - ON_CREATE_DB=tuerauf
   volumes:
     - /opt/tuerauf/var_lib_mysql:/var/lib/mysql
+    - /etc/localtime:/etc/localtime
   tags:
     - test
   autorestart: always
@@ -29,6 +30,7 @@ tuerauf-test:
     - SPRING_CONFIG_LOCATION=/usr/local/tomcat/conf/application-prod.properties
   volumes:
     - /opt/tuerauf/application-prod.properties:/usr/local/tomcat/conf/application-prod.properties
+    - /etc/localtime:/etc/localtime
   tags:
     - test
   autorestart: always
