--- a/tutum-test.yml
+++ b/tutum-test.yml
@@ -10,6 +10,7 @@ mysql-test:
   volumes:
     - /opt/tuerauf/var_lib_mysql:/var/lib/mysql
     - /etc/localtime:/etc/localtime
+    - /etc/timezone:/etc/timezone
   tags:
     - test
   autorestart: always
@@ -31,6 +32,7 @@ tuerauf-test:
   volumes:
     - /opt/tuerauf/application-prod.properties:/usr/local/tomcat/conf/application-prod.properties
     - /etc/localtime:/etc/localtime
+    - /etc/timezone:/etc/timezone
   tags:
     - test
   autorestart: always
