--- a/src/main/resources/application-prod-template.properties
+++ b/src/main/resources/application-prod-template.properties
@@ -35,6 +35,7 @@ spring.datasource.password=tuerauf
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.profiles.active=mysql
 
 # see http://stackoverflow.com/questions/22684807/spring-boot-jpa-configuring-auto-reconnect
