minor updates/corrections without any functional change

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,11 @@ spring.mail.host=localhost
 spring.view.prefix=/WEB-INF/jsp/
 spring.view.suffix=.jsp
 
+# http://stackoverflow.com/questions/21410317/using-gzip-compression-with-spring-boot-mvc-javaconfig-with-restful
+# note this will ONLY work if you are running embedded tomcat
+server.tomcat.compression: on
+server.tomcat.compressableMimeTypes=application/json,application/xml,text/html,text/xml,text/plain
+
 # Why do we need these? (because an error message tells me so...)
 spring.freemarker.checkTemplateLocation=false
 spring.velocity.checkTemplateLocation=false
