--- a/tutum/tuerauf-mysql-prod.yml
+++ b/tutum/tuerauf-mysql-prod.yml
@@ -20,9 +20,7 @@ mysql-prod:
 
 tuerauf-prod:
   image: dsteinkopf/tuerauf:prod
-  #ports:
-  #  - "8080:8080"
-  expose:
+  ports:
     - '8080'
   roles:
     - global
