--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,8 +33,9 @@ cache:
 stages:
   - build
   - test
-  - deploy
-  - pages
+#  - deploy
+#  - pages
+  - buildcontainer
 
 # This will only validate and compile stuff and run e.g. maven-enforcer-plugin.
 # Because some enforcer rules might check dependency convergence and class duplications
@@ -49,7 +50,8 @@ stages:
 .verify: &verify
   stage: test
   script:
-    - 'mvn $MAVEN_CLI_OPTS verify site site:stage'
+    # DSTK was: - 'mvn $MAVEN_CLI_OPTS verify site site:stage'
+    - 'mvn $MAVEN_CLI_OPTS verify'
   except:
     - master
 
@@ -69,30 +71,36 @@ verify:jdk8:
 # To get this working you need to define a volume while configuring your gitlab-ci-multi-runner.
 # Mount your `settings.xml` as `/root/.m2/settings.xml` which holds your secrets.
 # See https://maven.apache.org/settings.html
-deploy:jdk8:
-  stage: deploy
-  script:
-    - 'mvn $MAVEN_CLI_OPTS deploy site site:stage'
-  only:
-    - master
-  # Archive up the built documentation site.
-  artifacts:
-    paths:
-    - target/staging
-  image: maven:3-jdk-8
+#deploy:jdk8:
+#  stage: deploy
+#  script:
+#    # DSTK was: - 'mvn $MAVEN_CLI_OPTS deploy site site:stage'
+#    - 'mvn $MAVEN_CLI_OPTS deploy'
+#  only:
+#    - master
+#  # Archive up the built documentation site.
+#  artifacts:
+#    paths:
+#    - target/staging
+#  image: maven:3-jdk-8
 
 
-pages:
-  image: busybox:latest
-  stage: pages
-  script:
-    # Because Maven appends the artifactId automatically to the staging path if you did define a parent pom,
-    # you might need to use `mv target/staging/YOUR_ARTIFACT_ID public` instead.
-    - mv target/staging public
-  dependencies:
-    - deploy:jdk8
-  artifacts:
-    paths:
-    - public
-  only:
-    - master
+#pages:
+#  image: busybox:latest
+#  stage: pages
+#  script:
+#    # Because Maven appends the artifactId automatically to the staging path if you did define a parent pom,
+#    # you might need to use `mv target/staging/YOUR_ARTIFACT_ID public` instead.
+#    - mv target/staging public
+#  dependencies:
+#    - deploy:jdk8
+#  artifacts:
+#    paths:
+#    - public
+#  only:
+#    - master
+
+builddocker:
+  tags: dockerCreator
+  stage: buildcontainer
+  script: mvn -Dmaven.test.skip=true package docker:build # TODO configure to get package from previous step
