--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,7 +107,7 @@ builddocker:
   script:
     - mvn -Dmaven.test.skip=true package docker:build # TODO configure to get package from previous step
     - docker version
-    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+    - echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
     - docker tag -f dsteinkopf/tuerauf dsteinkopf/tuerauf:test
     - docker push dsteinkopf/tuerauf:test
   only:
